--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,10 @@
     padding: 50px 0px 50px 0px; 
 }
 .footer {
-    background-color: #D1C4E9; 
+    background-color: #191919; 
+}
+.col{
+    color:#888f96;
 }
 
 
