--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,12 @@
 .col{
     color:#888f96;
 }
-
+ 
+.imgg{
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
 
       .slider{
         width: 800px;
