--- a/css/loader.css
+++ b/css/loader.css
@@ -6,7 +6,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #242f3f;
+  background-color: #ed6206;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +14,8 @@
 }
 .loader {
   display: inline-block;
+  margin-top: 35%;
+  margin-left: 50%;
   width: 30px;
   height: 30px;
   position: relative;
