--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,11 @@
   overflow-wrap: break-word;
 } 
 
+.anch:hover{
+  text-decoration: none;
+
+}
+
 .imgg{
   width: 250px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
