--- a/css/newloader.css
+++ b/css/newloader.css
@@ -1,10 +1,10 @@
 #loading {
-    background: url('../images/91.gif') no-repeat center center;
+    background: url('../images/91.svg') no-repeat center center;
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     z-index: 9999999;
-    background-color: #EC6206;
+    background-color: #fff;
 }
